apps/api-dev/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-dev
    labels:
        run: api-dev
spec:
    ports:
        - port: 3000
          targetPort: 3000
    selector:
        run: api-dev
